--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,6 @@ GLOBAL CONTAINER & VEIL
     /* manages its visibility */
     opacity: 0;
     pointer-events: none;
-    -webkit-transition: all 150ms ease-in;
     transition: all 150ms ease-in}
 
 
@@ -34,9 +33,6 @@ GLOBAL CONTAINER & VEIL
 .u-modal.is-visible {
     pointer-events: auto;
     opacity: 1}
-
-
-
 
     /*
 
@@ -60,12 +56,8 @@ GLOBAL CONTAINER & VEIL
         left: 50%;
         z-index: 10;
 
-        -webkit-transform: translate(-50%, -55%);
                 transform: translate(-50%, -55%);
-        -webkit-transition: -webkit-transform 250ms 100ms linear;
-                transition: -webkit-transform 250ms 100ms linear;
-                transition: transform 250ms 100ms linear;
-        transition: transform 250ms 100ms linear, -webkit-transform 250ms 100ms linear}
+                transition: transform 250ms 100ms linear}
 
     /* Pseudo */
     .u-modal-box:before,
@@ -84,7 +76,6 @@ GLOBAL CONTAINER & VEIL
 
     /* When it's visible */
     .u-modal.is-visible .u-modal-box {
-        -webkit-transform: translate(-50%, -50%);
                 transform: translate(-50%, -50%)}
 
 
@@ -113,7 +104,6 @@ GLOBAL CONTAINER & VEIL
             cursor: pointer;
             border-bottom: 2px solid rgba(255,255,255,0);
 
-            -webkit-transition: color 150ms ease-in;
             transition: color 150ms ease-in}
 
         /* States */
@@ -140,7 +130,6 @@ GLOBAL CONTAINER & VEIL
             text-align: center;
             border-radius: 4px;
 
-            -webkit-transition: all 300ms ease-out;
             transition: all 300ms ease-out}
 
         /* States */
@@ -159,11 +148,8 @@ GLOBAL CONTAINER & VEIL
         */
 
         .u-modal-content {
-            display: -webkit-box;
-            display: -ms-flexbox;
             display: flex;
-            -ms-flex-flow: row wrap;
-                flex-flow: row wrap;
+            flex-flow: row wrap;
 
             margin-top: 16px;
             margin-bottom: 16px;
@@ -177,31 +163,22 @@ GLOBAL CONTAINER & VEIL
 
             .u-modal-column,
             .u-modal-column--full {
-                -webkit-transition: opacity 500ms ease-in, -webkit-transform 500ms ease-in;
-                transition: opacity 500ms ease-in, -webkit-transform 500ms ease-in;
                 transition: opacity 500ms ease-in, transform 500ms ease-in;
-                transition: opacity 500ms ease-in, transform 500ms ease-in, -webkit-transform 500ms ease-in;
             }
 
             /* Effects -> slide-up / slide-down */
             [data-effect^="slide"] {
                 opacity: 0;
-                -webkit-transition: opacity 550ms 150ms ease-in, -webkit-transform 600ms ease-in;
-                transition: opacity 550ms 150ms ease-in, -webkit-transform 600ms ease-in;
-                transition: transform 600ms ease-in, opacity 550ms 150ms ease-in;
-                transition: transform 600ms ease-in, opacity 550ms 150ms ease-in, -webkit-transform 600ms ease-in}
+                transition: transform 600ms ease-in, opacity 550ms 150ms ease-in}
             [data-effect="slide-up"] {
-                -webkit-transform: translateY(30px);
-                        transform: translateY(30px)}
+                transform: translateY(30px)}
             [data-effect="slide-down"] {
-                -webkit-transform: translateY(-30px);
-                        transform: translateY(-30px)}
+                transform: translateY(-30px)}
 
             /* When it's visible */
             .u-modal.is-visible [data-effect^="slide-"] {
                 opacity: 1;
-                -webkit-transform: translateY(0);
-                        transform: translateY(0)}
+                transform: translateY(0)}
 
 
 
@@ -231,29 +208,21 @@ GLOBAL CONTAINER & VEIL
                 /* Effects -> slide-up / slide-down */
                 .u-modal-txt--animated {
                     opacity: 0;
-                    -webkit-transition: -webkit-transform 400ms 200ms ease-in;
-                    transition: -webkit-transform 400ms 200ms ease-in;
                     transition: transform 400ms 200ms ease-in;
-                    transition: transform 400ms 200ms ease-in, -webkit-transform 400ms 200ms ease-in;
-                    -webkit-transform: translateY(6px);
-                            transform: translateY(6px)}
+                    transform: translateY(6px)}
 
                     /* Each new element must be its delay increased */
                     .u-modal-txt--animated:nth-child(1) {
-                        -webkit-transition: all 300ms 300ms ease-in;
                         transition: all 300ms 300ms ease-in}
                     .u-modal-txt--animated:nth-child(2) {
-                        -webkit-transition: all 400ms 300ms ease-in;
                         transition: all 400ms 300ms ease-in}
                     .u-modal-txt--animated:nth-child(3) {
-                        -webkit-transition: all 500ms 300ms ease-in;
                         transition: all 500ms 300ms ease-in}
 
                     /* When it's visible */
                     .u-modal.is-visible .u-modal-txt--animated {
                         opacity: 1;
-                        -webkit-transform: translateY(0);
-                                transform: translateY(0)}
+                        transform: translateY(0)}
 
 
 
@@ -302,17 +271,13 @@ MEDIA QUERIES
         margin-bottom: 24px}
 
             .u-modal-column--full {
-                -ms-flex-preferred-size: 100%;
-                    flex-basis: 100%}
+                flex-basis: 100%}
             .u-modal-column {
-                -ms-flex-preferred-size: 30%;
-                    flex-basis: 30%}
+                flex-basis: 30%}
             .u-modal-column + .u-modal-column {
-                -ms-flex-preferred-size: 70%;
-                    flex-basis: 70%;
+                flex-basis: 70%;
                 padding-left: 16px}
 
                 .u-modal-title {
                     font-size: 24px}
-
 }
